--- a/_posts/2022-07-03-PQ-台灣芒果被確診-吳釗燮-他們到底怎麼找到水果的鼻子做pcr.html
+++ b/_posts/2022-07-03-PQ-台灣芒果被確診-吳釗燮-他們到底怎麼找到水果的鼻子做pcr.html
@@ -28,7 +28,7 @@ author: 呂酒林
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/e14375bc-2000x1340_0841022533079.jpg" alt="" class="wp-image-106590" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/e14375bc-2000x1340_0841022533079.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/e14375bc-2000x1340_0841022533079-300x201.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/e14375bc-2000x1340_0841022533079-768x515.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣芒果（圖／中央社）</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/e14375bc-2000x1340_0841022533079.jpg" alt="" class="wp-image-106590" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/e14375bc-2000x1340_0841022533079.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/e14375bc-2000x1340_0841022533079-300x201.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/e14375bc-2000x1340_0841022533079-768x515.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣芒果（圖／中央社）</figcaption></figure>
 
 
 
