--- a/_posts/2022-07-04-PQ-印度防中資滲透再下一城-中國長城汽車收購案破局.html
+++ b/_posts/2022-07-04-PQ-印度防中資滲透再下一城-中國長城汽車收購案破局.html
@@ -12,7 +12,7 @@ author: 艾格姆
 
 
 
-<p>通用汽車於 2020 年 1 月跟中國長城汽車達成協議，以 3 億美元把印度廠賣給長城汽車。而這收購案也是長城汽車 10 億美元進軍印度汽車市場計劃的一部分。但是，該協議經兩次延期，於 2022 年 6 月 30 日協議到期未能有進展而破局。值得注意的是，在通用汽車與長城達成協議後幾個月，印度政府於 2020 年 4 月對包括中國在內的鄰國的投資採取強硬立場加強審查，而長城汽車的收購案成為第一個祭品。</p>
+<p>通用汽車於 2020 年 1 月跟中國長城汽車達成協議，以 3 億美元把印度廠賣給長城汽車。而這收購案也是長城汽車預備 10 億美元進軍印度汽車市場計劃的一部分。但是，該協議經兩次延期，於 2022 年 6 月 30 日協議到期未能有進展而破局。值得注意的是，在通用汽車與長城達成協議後幾個月，印度政府於 2020 年 4 月對包括中國在內的鄰國的投資採取強硬立場加強審查，而長城汽車的收購案成為第一個祭品。</p>
 
 
 
@@ -32,7 +32,7 @@ author: 艾格姆
 
 
 
-<p>只是，在收購通用汽車印度廠協議的幾個月後，印度政府就加強審查那些與印度有著陸地邊界之國家的投資案，以防止其他國家在疫情期間趁機大肆收購印度企業或工廠。而這只是印度跟中國外交關係惡化的情況下，防止中企在印度擴張的其中一部分而已。另外，出於安全考慮，印度早已禁止了包括 TikTok 在內的 300 多個中國 App。</p>
+<p>只是，在中國收購通用汽車印度廠協議完成的幾個月後，印度政府就加強審查那些與印度有著陸地邊界之國家的投資案，以防止其他國家在疫情期間趁機大肆收購印度企業或工廠。中國此次收購案未通過印度監管單位核准，只是印度跟中國外交關係惡化的情況下，防止中企在印度擴張的其中一部分而已。另外，出於安全考慮，印度早已禁止了包括 TikTok 在內的 300 多個中國 App。</p>
 
 
 
