--- a/_posts/2022-07-06-PQ-美國制裁援俄5中企進黑名單-抖音再爆美用戶資料外洩中國醜聞.html
+++ b/_posts/2022-07-06-PQ-美國制裁援俄5中企進黑名單-抖音再爆美用戶資料外洩中國醜聞.html
@@ -24,7 +24,7 @@ author: 艾格姆
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1d206f00-china-russia-yuan-ruble-1024x574.jpg" alt="" class="wp-image-106824" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1d206f00-china-russia-yuan-ruble-1024x574.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1d206f00-china-russia-yuan-ruble-300x168.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1d206f00-china-russia-yuan-ruble-768x431.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1d206f00-china-russia-yuan-ruble.jpg 1366w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>5家中國企業仍出售軍事零件給俄羅斯，因此遭到美國政府制裁。<br>圖為人民幣與盧布<br>圖／Twitter</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1d206f00-china-russia-yuan-ruble-1024x574.jpg" alt="" class="wp-image-106824" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1d206f00-china-russia-yuan-ruble-1024x574.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1d206f00-china-russia-yuan-ruble-300x168.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1d206f00-china-russia-yuan-ruble-768x431.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/1d206f00-china-russia-yuan-ruble.jpg 1366w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>5家中國企業仍出售軍事零件給俄羅斯，因此遭到美國政府制裁。<br>圖為人民幣與盧布<br>圖／Twitter</figcaption></figure></div>
 
 
 
