--- a/_posts/2022-07-06-INMEDIA-醫護行者推社區購物券計劃-放權-街坊親自落區籌備.html
+++ b/_posts/2022-07-06-INMEDIA-醫護行者推社區購物券計劃-放權-街坊親自落區籌備.html
@@ -24,7 +24,7 @@ author: 獨媒報導
 <p>Marco形容疫情使人與人之間的關係變得虛擬化，社區有甚麼改變、經常光顧的店舖名字是甚麼等等日常生活的細節往往被忽視。他舉例說，由於光輝圍一帶居住大部分都是低收入家庭，唯獨有一間裝修較高檔的Pizza店開在這裡，街坊看到店舖外部的裝橫已判定自己「消費唔起」，甚至沒有走入餐廳看過餐牌。Macro則希望計劃能打破這種異狀，讓店舖有機會亦融入社區之中，「如果舖頭開係呢到，街坊覺得格格不入，會唔會都可以畀個機會佢融入返個社區？」</p>
 <p><strong>退休人士懊悔以往只顧工作忽視身邊人和事 望藉機會貢獻社區</strong></p>
 <p>計劃研究員之一黃先生是退休人士。他形容自己性格比較孤僻，懊悔以前只會埋首工作，很少主動接觸陌生的人和事。退休後才多了時間才漸漸多了空間抽身貢獻社區，「睇下自己幫到幾多得幾多」。 </p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4u0TqT" title="左研究員吳先生 右社工marco"><img src="https://live.staticflickr.com/65535/52188561138_bedcf7d79b_h.jpg" width="1600" alt="左研究員吳先生 右社工marco" /></a><em>左：研究員吳先生、右：社工marco</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4u0TqT" title="左研究員吳先生 右社工marco"><img src="https://live.staticflickr.com/65535/52188561138_bedcf7d79b_h.jpg" width="1600" alt="左：研究員黃先生、右：社工marco" /></a><em>左：研究員吳先生、右：社工marco</em></p>
 <p>黃先生稱，疫情導致需長期留家與家人困獸鬥，自己的心情和狀態亦很差，甚至不太懂得如何與人相處。疫情稍緩後，得悉機構擬舉辦計劃後便向負責人報名參與，希望能重新建立與社區的聯繫。不過他發現第五波疫情亦導致社區出現「洗牌」，有屹立多年的小店抵擋不住經營壓力而結業，更有舖位半年間轉手多次，同時亦有連鎖店加入。</p>
 <p><strong>機構安排角色扮演盼增研究員信心 </strong></p>
 <p>落區接觸小店前，黃先生有參加機構安排的角色扮演環節，有人飾演老闆、有人飾演研究員，過程中「諗下會有咩問題出現」。他坦言即使有心理準備會被店舖拒絕，惟當真實落區時「都會驚，因為我從來都唔會做呢啲嘢，平時買完嘢就算㗎嘛！」。</p>
