--- a/_posts/2022-07-06-INMEDIA-直資學校非本地課程擬增-高考-蔡若蓮-服務內地人才子女.html
+++ b/_posts/2022-07-06-INMEDIA-直資學校非本地課程擬增-高考-蔡若蓮-服務內地人才子女.html
@@ -11,12 +11,11 @@ author: 獨媒報導
 <img src="https://www.inmediahk.net/files/column_images/1112.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>香港現時有80間直資學校，部分為中五及中六學生開辦非本地課程，銜接海外公開試。全港32萬中學生，只有0.35%學生報讀非本地課程，有立法會議員卻關注這批約1,100名學生，是否接受足夠國安教育。教育局局長蔡若蓮指，讀非本地課程的學生雖然不用考DSE，但都應在中四修讀「公社科」，以「探索和發掘興趣」。蔡若蓮又透露，教育局正研究在非本地課程加入「內地課程」，滿足內地人才家庭的子女教育需要。</p>
 <p>80間直資學校中，有59間中學生及21間小學，它們以本地學校模式運作，主要接收本地學生，在小一至中四直資學校只提供本地課程。目前，有17間中學會為中五及中六學生開辦非本地課程，即文憑試以外的海外公開試，提供更多升學途徑。資料顯示，課程包括包括英國、澳洲、加拿大、法國、德國、日本、新加坡、 南韓及美國等地方的課程，以及國際文憑課程。</p>
 <p>在2021/22學年，全港32萬中學生，只有 0.35%，即1,125人報讀非本地課程。教聯會副主席、立法會議員朱國強在立法會口頭質詢，詢問當局會否要求所有非本地課程設立中文科及公民科，又問局方如何確保這批學生獲得一定程度的「中文及公民教育」。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/8i2V6M" title="無標題"><img src="https://live.staticflickr.com/65535/52197200296_2d490a2107_z.jpg" alt="無標題" /></a><br />
-教育局局長蔡若蓮</p>
-<p><strong>不論國藉都須讀中文</strong></p>
-<p>蔡若蓮回應指，所有直資學校學生，不論國藉都必須修讀中國語文，因為中文是六年中學課程的必修科；直資學校須為非本地課程學生，提供總課程時數與中文科指定課時大致相同的課程，包括文學，文化、品德價值等元素。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/8i2V6M" title="無標題"><img src="https://live.staticflickr.com/65535/52197200296_2d490a2107_z.jpg" alt="無標題" /></a><br /><em>教育局局長蔡若蓮</em></p>
+<p><strong>不論國籍都須讀中文</strong></p>
+<p>蔡若蓮回應指，所有直資學校學生，不論國籍都必須修讀中國語文，因為中文是六年中學課程的必修科；直資學校須為非本地課程學生，提供總課程時數與中文科指定課時大致相同的課程，包括文學，文化、品德價值等元素。</p>
 <p>至於取代通識的「公社科」，蔡若蓮指一般而言直資學校會為中四學生提供文憑試課程，進行「探索和發掘興趣」，認為非本地學生都應該修讀公社科。蔡又指，香港、國家和當代世界等元素，都在小學常識、初中歷史等課程存在，形容非本地課程學生能「自小學開始，就喺培養國家觀念、正向價值觀態度氛圍下成長」。她強調所有學校，包括直資學校和國際學校，都必須遵守《國安法》，為學生進行國家安全教育，當局會透過日常探訪和與學校接觸，監管學生學習質素。</p>
 <p><strong>「好鼓勵、好歡迎」內地學生在港讀書</strong></p>
-<p>選委界黃元山則問，政府有沒有計劃接收大灣區學生，就讀直資學校的非本地課程。蔡若蓮指「好鼓勵、好歡迎」大灣區發展，讓更多內地學生在本地就讀「相關需要課程」。她透露教育局中探討在非本地課程新增內地課程，專門接收「內地人材家庭的子女」的教育需要。</p>
+<p>選委界黃元山則問，政府有沒有計劃接收大灣區學生，就讀直資學校的非本地課程。蔡若蓮指「好鼓勵、好歡迎」大灣區發展，讓更多內地學生在本地就讀「相關需要課程」。她透露教育局中探討在非本地課程新增內地課程，專門接收「內地人才家庭的子女」的教育需要。</p>
 <p>考評局早前已經放寛考試規則，容許2024年度起文憑試大部分科目可以在內地考核。</p>
 </div></div></div>
