--- a/_posts/2022-07-06-PQ-前時力立委徐永明sogo案一審有罪判刑七年-同黨議員廖郁賢-國家認證-黃色雙標.html
+++ b/_posts/2022-07-06-PQ-前時力立委徐永明sogo案一審有罪判刑七年-同黨議員廖郁賢-國家認證-黃色雙標.html
@@ -8,7 +8,7 @@ tags: blog
 author: 霍布斯潘
 ---
 
-<p>前時代力量主席徐永明因涉嫌接受李恆隆 200 萬賄款，遭到檢調起訴，此案牽涉跨黨派立委涉貪，引起注目，然而，時代力量一向以清新打攤的新政治展現於眾人，才會更受到外界高度重視。今（6）日，台北地方法院一審宣判，徐永明被叛 7 年 4 月、褫奪公權 3 年。時力表示概括承受所有的政治責任，而同黨議員廖郁賢評論表示「國家認證，黃色雙標」。</p>
+<p>前時代力量主席徐永明因涉嫌接受李恆隆 200 萬賄款，遭到檢調起訴，此案牽涉跨黨派立委涉貪，引起注目，然而，時代力量一向以清新打貪的新政治展現於眾人，才會更受到外界高度重視。今（6）日，台北地方法院一審宣判，徐永明被叛 7 年 4 月、褫奪公權 3 年。時力表示概括承受所有的政治責任，而同黨議員廖郁賢評論表示「國家認證，黃色雙標」。</p>
 
 
 
@@ -32,7 +32,7 @@ author: 霍布斯潘
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/900b47b4-時代力量當年提出「當選人貪汙，推薦政黨連帶處罰」。-1024x627.jpg" alt="" class="wp-image-106881" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/900b47b4-時代力量當年提出「當選人貪汙，推薦政黨連帶處罰」。-1024x627.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/900b47b4-時代力量當年提出「當選人貪汙，推薦政黨連帶處罰」。-300x184.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/900b47b4-時代力量當年提出「當選人貪汙，推薦政黨連帶處罰」。-768x470.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/900b47b4-時代力量當年提出「當選人貪汙，推薦政黨連帶處罰」。.jpg 1080w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>時代力量當年提出「當選人貪汙犯罪，推薦政黨連帶處罰」。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/900b47b4-時代力量當年提出「當選人貪汙，推薦政黨連帶處罰」。-1024x627.jpg" alt="" class="wp-image-106881" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/900b47b4-時代力量當年提出「當選人貪汙，推薦政黨連帶處罰」。-1024x627.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/900b47b4-時代力量當年提出「當選人貪汙，推薦政黨連帶處罰」。-300x184.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/900b47b4-時代力量當年提出「當選人貪汙，推薦政黨連帶處罰」。-768x470.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/900b47b4-時代力量當年提出「當選人貪汙，推薦政黨連帶處罰」。.jpg 1080w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>時代力量當年提出「當選人貪汙犯罪，推薦政黨連帶處罰」。</figcaption></figure></div>
 
 
 
