--- a/_posts/2022-07-06-PQ-已接納近40萬烏克蘭難民-捷克任歐盟輪值主席再籲歐盟挺烏.html
+++ b/_posts/2022-07-06-PQ-已接納近40萬烏克蘭難民-捷克任歐盟輪值主席再籲歐盟挺烏.html
@@ -16,7 +16,7 @@ author: 王雪俐
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/cf8d0805-歐盟成員國（圖／報呱製圖）-1024x764.png" alt="" class="wp-image-105790" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/cf8d0805-歐盟成員國（圖／報呱製圖）-1024x764.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/cf8d0805-歐盟成員國（圖／報呱製圖）-300x224.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/cf8d0805-歐盟成員國（圖／報呱製圖）-768x573.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/cf8d0805-歐盟成員國（圖／報呱製圖）-1536x1145.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/cf8d0805-歐盟成員國（圖／報呱製圖）.png 1864w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>7 月 1 日捷克接任為期六個月的歐盟輪值主席國，布拉格智庫國際事務委員會成員哈佛利切克表示，捷克將在輪值主席期間遇上「惡劣天候」。（圖／報呱製圖）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/cf8d0805-歐盟成員國（圖／報呱製圖）-1024x764.png" alt="" class="wp-image-105790" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/cf8d0805-歐盟成員國（圖／報呱製圖）-1024x764.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/cf8d0805-歐盟成員國（圖／報呱製圖）-300x224.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/cf8d0805-歐盟成員國（圖／報呱製圖）-768x573.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/cf8d0805-歐盟成員國（圖／報呱製圖）-1536x1145.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/cf8d0805-歐盟成員國（圖／報呱製圖）.png 1864w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>7 月 1 日捷克接任為期六個月的歐盟輪值主席國，布拉格智庫國際事務委員會成員哈佛利切克表示，捷克將在輪值主席期間遇上「惡劣天候」。（圖／報呱製圖）</figcaption></figure>
 
 
 
