Update VOCUS 2022-07-08 patch

--- a/_posts/2022-07-07-VOCUS-烏克蘭戰爭背後的通膨四部曲.html
+++ b/_posts/2022-07-07-VOCUS-烏克蘭戰爭背後的通膨四部曲.html
@@ -8,4 +8,10 @@ tags: blog
 author: 吳嘉隆
 ---
 
-烏克蘭戰爭背後的通膨四部曲
+<p>我想從從烏克蘭戰爭，來解讀通膨的走勢￼。這將是宏觀視野的一個腦力激盪。</p>
+<p>美國打烏克蘭戰爭，戰略目標有兩個階段，第一個階段是：</p>
+<p>1）要普丁下台，還有</p>
+<p>2）烏克蘭要全面恢復領土與主權的完整，當然包括收回烏東地區與克里米亞半島。</p>
+<p>第二個階段是要阻止俄國以後有能力侵略周邊的小國，所以要對俄國「去軍事化￼」。畢竟救烏克蘭不能只是救這一次，而是以後也要讓烏克蘭不用再受到俄國的侵略。￼</p>
+<p>所以，美國的真正目標是要消耗俄國，拖垮俄國。所以會讓俄國在烏克蘭境內偶爾打勝仗，偶爾有所進展，可以宣傳一下。</p>
+<p>然後，西方國家源源不絕給烏克蘭遠程打擊武器，讓烏克蘭再反攻回去。於是俄國拉不下臉，只好增兵烏克蘭，把軍事資產源源不絕送入烏克蘭，然後當然是被烏克蘭打掉。</p>
