--- a/_posts/2022-07-07-INMEDIA-李家超fb晒愛心午餐-稱得25分鐘食飯-梁熙俾喊喊emoji.html
+++ b/_posts/2022-07-07-INMEDIA-李家超fb晒愛心午餐-稱得25分鐘食飯-梁熙俾喊喊emoji.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20220707lh.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>特首李家超上任後，頻頻透過Facebook報告工作行程之餘，不時分享個人生活。繼在上任首日貼出太太為自己打呔的照片，他今日又貼出午飯相片，稱只有25分鐘用膳時間，並hastag「#愛心午餐」。民建聯立法會議員梁熙給予「喊喊」emoji回應，他向《獨媒》解釋，感受到李休息時間少且壓力大，希望跟他說聲加油。</p>
+<img src="https://www.inmediahk.net/files/column_images/20220707lh.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>特首李家超上任後，頻頻透過Facebook報告工作行程之餘，不時分享個人生活。繼在上任首日貼出太太為自己打呔的照片，他今日又貼出午飯相片，稱只有25分鐘用膳時間，並hashtag「#愛心午餐」。民建聯立法會議員梁熙給予「喊喊」emoji回應，他向《獨媒》解釋，感受到李休息時間少且壓力大，希望跟他說聲加油。</p>
 <p>李家超今午出帖，稱「因要出外活動 今天午飯時間 有25分鐘」，附上午餐相片，包括雞飯、水果和茶。帖文發出2小時後，獲超過3千人讚好，包括立法會議員管浩鳴、「 玻璃朱」朱庭萱等。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/vmE5gB" title="Screenshot 2022-07-07 at 4.28.34 PM"><img src="https://live.staticflickr.com/65535/52199819403_ff1680f70d_z.jpg" alt="Screenshot 2022-07-07 at 4.28.34 PM" /></a></p>
 <p>給予「喊喊」emoji的梁熙向《獨媒》表示，感受到李家超上任後馬不停蹄地工作，休息時間少且壓力大，故希望跟他說聲加油。被問到為何不直接留下鼓勵說話，他指自己在其他帖文都有留言。</p>
