--- a/_posts/2022-07-07-INMEDIA-8書院學生會組平台-欲重啟中大學生會-召集人-望有民意基礎下發聲.html
+++ b/_posts/2022-07-07-INMEDIA-8書院學生會組平台-欲重啟中大學生會-召集人-望有民意基礎下發聲.html
@@ -14,4 +14,5 @@ author: 獨媒報導
 <p>羅竣彥指中大學生會解散後，校方和書院學生會之間一直有溝通，雙方都希望重建中大學生會，處理原本由學生會處理的行政工作。他指雙方都希望有「新中大學生會」，提到原本由學生會處理的行政工作，如為過百學生團體申請會室、舉辦「藝墟」等活動，現時要改由OSA負責處理，對雙方都不便。</p>
 <p>他又指，在交通諮詢、餐廳管理等議題上，學生會過往均會發聲，但學生會「解散」後，看不到學生事務處（OSA）如何有直接收集學生意見；若能選出學生代表為學生發聲，「至少有民意基礎」。</p>
 <p>在中大九個書院中，只有晨興書院的學生會未有參與小組。羅竣彥表示曾接觸對方，但不獲回覆。</p>
+<p>中大向《獨媒》表示，校方樂見有學生代表成立跨書院學生組織，期待與相關同學開展具建設性的對話和合作，探討成立一個有廣泛代表性，包括本地及非本地、本科及研究生在內的學生組織。中大亦重申，會支持按相關條例註冊及依據獲通過之會章運作的學生組織。</p>
 </div></div></div>
