--- a/_posts/2022-07-08-INMEDIA-安心出行-將提升功能-加強追蹤陽性及強檢人士.html
+++ b/_posts/2022-07-08-INMEDIA-安心出行-將提升功能-加強追蹤陽性及強檢人士.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/safehm%201280.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>醫務衞生局局長盧寵茂表示，當局將加強「安心出行」追蹤功能，並透露已和創新科技及工業局開會，將重點加強追蹤核酸檢測陽性或須強檢人士。盧寵茂又指，當局會就「安心出行」對市民多加解說，「俾市民明白到係為防疫需要」。</p>
-<p>盧寵茂上任後首次出席立法會會議，多名議員關注「安心出行」應用程式功能不足。民建聯葛珮帆不滿仍未有追蹤功能，並問到香港健康碼的進度。盧寵茂亦承認，「安心出行」有很多改善空間，兩個政策局已開會研究改善，「會提升佢嘅功能，特別係真係有核酸檢測陽性或者需要去到做核酸嘅時候，希望安心出行可以幫到我哋搵到呢啲人。」</p>
+<p>盧寵茂上任後首次出席立法會會議，多名議員關注「安心出行」應用程式功能不足。民建聯葛珮帆不滿仍未有追蹤功能，並問到香港健康碼的進度。盧寵茂亦承認，「安心出行」有很多改善空間，兩個政策局已開會研究改善：「會提升佢嘅功能，特別係真係有核酸檢測陽性或者需要去到做核酸嘅時候，希望安心出行可以幫到我哋搵到呢啲人。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/qmPK49" title="螢幕截圖 2022-07-08 下午2.05.03"><img src="https://live.staticflickr.com/65535/52200682462_10db497037_c.jpg" width="800" alt="螢幕截圖 2022-07-08 下午2.05.03" /></a><br /><em>葛珮帆</em></p>
 <p>選委界簡慧敏同質疑，「安心出行」非實名制，現仍要由衞生署人手追蹤確診患者，認為非常不理想。她認為，「安心出行」如仍缺乏追蹤功能，加上本港未有健康碼，會影響與內地通關。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/m5K078" title="螢幕截圖 2022-07-08 下午2.05.21"><img src="https://live.staticflickr.com/65535/52202182115_1d4a8c7bee_c.jpg" width="800" alt="螢幕截圖 2022-07-08 下午2.05.21" /></a><br /><em>簡慧敏</em></p>
@@ -19,7 +19,7 @@ author: 獨媒報導
 <p>另外，盧寵茂指當局會將核酸檢測常態化，提升核酸檢測的數量、速度及準確性，「做到又多又準又快又易又平」，以配合靈敏度相對欠準確的快速測試。至於社交距離措施，盧寵茂則指按現時疫情趨勢，現階段不容進一步放寬。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/9E81B2" title="螢幕截圖 2022-07-08 下午2.05.11"><img src="https://live.staticflickr.com/65535/52200682427_94505dc7d8_c.jpg" width="800" alt="螢幕截圖 2022-07-08 下午2.05.11" /></a><br /><em>盧寵茂</em></p>
 <p><strong>當局指七一、打風致檢測數字一度下跌<strong></strong></strong></p>
-<p>衛生防護中心昨日預告，兩周後確診數字或升至6,000宗，楊永杰關注備用設施何時重啟、醫護人手是否足夠，及關注抵港人士的隔離設施需求問題。盧寵茂認為6,000宗的推斷合理，但指因七一公眾假期、懸掛八號風球一度令檢測數字下跌，而確診數字反彈亦與檢測量增加有關，惟他及後遭委員會主席張宇人打斷，指其他問題可用書面回覆。</p>
+<p>衞生防護中心昨日預告，兩周後確診數字或升至6,000宗，楊永杰關注備用設施何時重啟、醫護人手是否足夠，及關注抵港人士的隔離設施需求問題。盧寵茂認為6,000宗的推斷合理，但指因七一公眾假期、懸掛八號風球一度令檢測數字下跌，而確診數字反彈亦與檢測量增加有關，惟他及後遭委員會主席張宇人打斷，指其他問題可用書面回覆。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/n9S896" title="螢幕截圖 2022-07-08 下午2.20.35"><img src="https://live.staticflickr.com/65535/52201954089_8433414d0c_c.jpg" width="800" alt="螢幕截圖 2022-07-08 下午2.20.35" /></a><br /><em>楊永杰</em></p>
 <p>政府昨日宣布暫緩航班熔斷機制，指措施對阻止輸入個案的效益不大。盧寵茂表示，當局會透過科學數據作研判，以採取有效精準措施，防止重症、死亡，及避免醫療系統崩潰，兼確保防疫措施不會對市民生活、經濟帶來太大影響，恢復對內地及國際的聯繫。</p>
 <p><strong>盧寵茂：政府從未提出「5+2」方案<strong></strong></strong></p>
