--- a/_posts/2022-07-09-PQ-解析2022北約戰略構想-從中國對東歐威脅警惕台灣.html
+++ b/_posts/2022-07-09-PQ-解析2022北約戰略構想-從中國對東歐威脅警惕台灣.html
@@ -24,7 +24,7 @@ author: 李 運理
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b7f8e244-dsc_2290-1024x683.jpg" alt="" class="wp-image-107340" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b7f8e244-dsc_2290-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b7f8e244-dsc_2290-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b7f8e244-dsc_2290-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b7f8e244-dsc_2290-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b7f8e244-dsc_2290.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>第四場由歐洲價值安全政策中心在台辦事處主任 Marcin Jerzewski（葉皓勤）發表。（圖／報呱提供）<br></figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b7f8e244-dsc_2290-1024x683.jpg" alt="" class="wp-image-107340" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b7f8e244-dsc_2290-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b7f8e244-dsc_2290-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b7f8e244-dsc_2290-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b7f8e244-dsc_2290-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/b7f8e244-dsc_2290.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>第四場由歐洲價值安全政策中心在台辦事處主任 Marcin Jerzewski（葉皓勤）發表。（圖／報呱提供）<br></figcaption></figure></div>
 
 
 
