--- a/_posts/2022-07-08-INMEDIA-去年七一扔國旗進垃圾桶-23歲男子罪成-官指於-大日子-犯案加重侮辱.html
+++ b/_posts/2022-07-08-INMEDIA-去年七一扔國旗進垃圾桶-23歲男子罪成-官指於-大日子-犯案加重侮辱.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/23_69.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>23歲男子涉於去年七一，在黃大仙扯下3面國旗並拋進垃圾桶。他否認一項侮辱國旗罪，今（8日）於九龍城裁判法院被裁定罪成。裁判官莫子聰指，被告大力拆下國旗及「揸埋一嚿」，帶輕蔑、鄙視和惡意，加上在慶祝回歸的「大日子」犯案：「為何不是加重對國旗的侮辱？」莫官指控罪嚴重，考慮判處被告即時監禁，但會先索取勞教報告。案件押後至今月28日裁決，被告須即時還柙。</p>
+<img src="https://www.inmediahk.net/files/column_images/23_69.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>23歲男子涉於去年七一，在黃大仙扯下3面國旗並拋進垃圾桶。他否認一項侮辱國旗罪，今（8日）於九龍城裁判法院被裁定罪成。裁判官莫子聰指，被告大力拆下國旗及「揸埋一嚿」，帶輕蔑、鄙視和惡意，加上在慶祝回歸的「大日子」犯案：「為何不是加重對國旗的侮辱？」莫官指控罪嚴重，考慮判處被告即時監禁，但會先索取勞教報告。案件押後至今月28日判刑，被告須即時還柙。</p>
 <p>莫官接納目擊案發經過的司機供詞，指證人的說法與行車紀錄儀拍影像吻合，即使他供稱男子拆旗後從片段畫面右方離開，與畫面顯示他從左方離開不同，但可能是因為事發太久，證人一時記錯或說錯。</p>
 <p>莫官亦接納警員證供，指警員在拘捕時從被告居所撿取的背心、短褲和拖鞋，與涉案人穿著吻合，當時被告的髮型、身型和年齡同與涉案人吻合；而正因被告就是涉案人，警員才會見到被告被父親詢問是有否拆國旗時，點頭及說「有」。</p>
 <p>綜合考慮，莫官推論被告就是涉案人，他先後拆下三面不屬自己的國旗，把旗幟和旗杆分開後扔進垃圾桶，這無疑是侮辱國旗，裁定被告罪成。</p>
@@ -17,7 +17,7 @@ author: 獨媒報導
 <p>辯方續指被告拆除國旗後，沒作燒毁等進一步破壞，且案發時間短，沒引起他人注意和加入，亦不見被告是有預謀犯案，引述案例建議不應判超過四個月監禁。</p>
 <p><strong>官批於慶回歸「大日子」犯案  大動作拆旗帶惡意</strong></p>
 <p>惟莫官指當中是慶祝回歸的日子，反問辯方：「為何不是加重對國旗的侮辱？」莫官又指，影片可見被告當時以大動作拆下國旗，把旗杆扔在一旁，並大力將旗幟「揸埋一嚿」，可見他帶輕蔑、鄙視和惡意。</p>
-<p>莫官指被告在慶祝回歸的「大日子」犯案，控罪非常嚴重，考慮判處即時監禁，但因被告不足25歲，會先為他索取勞教報告。案件押後至今月28日裁決，被告須即時還柙，他進入被告欄前回頭向旁聽席揮手。</p>
+<p>莫官指被告在慶祝回歸的「大日子」犯案，控罪非常嚴重，考慮判處即時監禁，但因被告不足25歲，會先為他索取勞教報告。案件押後至今月28日判刑，被告須即時還柙，他進入被告欄前回頭向旁聽席揮手。</p>
 <p>控罪指，被告彭子健（23歲，兼職補習老師）於2021年7月1日在黃大仙毓華街與毓華里交界，公開及故意以玷污的方式侮辱3面國旗。</p>
 <p>案件編號：KCCC3599/2021</p>
 <p>相關報導：<br /><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E8%A3%9C%E7%BF%92%E8%80%81%E5%B8%AB%E5%90%A6%E8%AA%8D%E6%8B%86%E5%9C%8B%E6%97%97%E6%A3%84%E6%96%BC%E5%9E%83%E5%9C%BE%E6%A1%B6-%E8%B3%AA%E7%96%91%E7%9B%AE%E6%93%8A%E8%AD%89%E4%BA%BA%E8%A8%98%E6%86%B6%E6%9C%89%E8%AA%A4%E3%80%81%E5%BE%9E%E6%B2%92%E5%90%91%E8%AD%A6%E6%8B%9B%E8%AA%8D">補習老師否認拆國旗棄於垃圾桶 質疑目擊證人記憶有誤、從沒向警招認</a></p>
