--- a/_posts/2022-07-09-PQ-蔡英文宣佈降半旗悼念-泉裕泰-願安倍晉三與李登輝在天上守候日台.html
+++ b/_posts/2022-07-09-PQ-蔡英文宣佈降半旗悼念-泉裕泰-願安倍晉三與李登輝在天上守候日台.html
@@ -24,7 +24,7 @@ author: 楊是命
 
 
 
-<div class="wp-block-image is-style-default"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/294450dd-800x633_813540071202.jpeg" alt="" class="wp-image-107372" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/294450dd-800x633_813540071202.jpeg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/294450dd-800x633_813540071202-300x237.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/294450dd-800x633_813540071202-768x608.jpeg 768w" sizes="(max-width: 600px) 100vw, 600px" /><figcaption>2011年9月6日，民進黨主席蔡英文（左）在台北國賓飯店與日本前首相安倍晉三（右）會晤，兩人握手致意。<br>（圖／中央社檔案照片） </figcaption></figure></div>
+<div class="wp-block-image is-style-default"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/294450dd-800x633_813540071202.jpeg" alt="" class="wp-image-107372" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/294450dd-800x633_813540071202.jpeg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/294450dd-800x633_813540071202-300x237.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/294450dd-800x633_813540071202-768x608.jpeg 768w" sizes="(max-width: 600px) 100vw, 600px" /><figcaption>2011年9月6日，民進黨主席蔡英文（左）在台北國賓飯店與日本前首相安倍晉三（右）會晤，兩人握手致意。<br>（圖／中央社檔案照片） </figcaption></figure></div>
 
 
 
