--- a/_posts/2022-07-10-PQ-強生之後誰入主唐寧街-現貿易大臣茉丹特呼聲高.html
+++ b/_posts/2022-07-10-PQ-強生之後誰入主唐寧街-現貿易大臣茉丹特呼聲高.html
@@ -20,7 +20,7 @@ author: 王雪俐
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost.jpeg" alt="" class="wp-image-104944" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost-768x512.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>儘管歐盟政壇與強生多所齟齬，但「不只基輔，歐盟及北約在中東歐的盟國都會深切懷念」強生面對烏克蘭戰爭的堅定立場（圖／@KyivPost）</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost.jpeg" alt="" class="wp-image-104944" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost-768x512.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>儘管歐盟政壇與強生多所齟齬，但「不只基輔，歐盟及北約在中東歐的盟國都會深切懷念」強生面對烏克蘭戰爭的堅定立場（圖／@KyivPost）</figcaption></figure>
 
 
 
