Update VOCUS 2022-07-12 patch

--- a/_posts/2022-07-11-VOCUS-台灣要學安倍-既是棋子-也要是棋手.html
+++ b/_posts/2022-07-11-VOCUS-台灣要學安倍-既是棋子-也要是棋手.html
@@ -8,4 +8,9 @@ tags: blog
 author: 吳嘉隆
 ---
 
-台灣要學安倍，既是棋子，也要是棋手！
+<p>台灣一定是大國的棋子，就像日本也是美國的棋子一樣，德國也是。</p>
+<p>希望台灣不要成為大國的棋子，這是美好的願望，但是，是不切實際的。</p>
+<p>於是，台灣要學安倍，要懂得在棋局中討生活，所以台灣要有這樣的目標，既是棋子，也要是棋手！</p>
+<p>那要怎麼做呢？</p>
+<p>也許小國可以努力把好幾個大國引進來，讓他們互相爭奪對小國的控制，結果是讓大國與大國之間去互相制衡！</p>
+<p>道理很簡單，一個小國如果單獨去面對一個大國，這個小國肯定沒得玩，但是，如果局面變成是一個小國同時面對兩個大國、三個大國、四個大國⋯，那麼這個小國就會是「關鍵少數」，根本就很有得玩！</p>
