--- a/_posts/2022-07-10-INMEDIA-盧寵茂擬推-安心出行-實名制-張竹君稱無補充-惟認現時追蹤有局限.html
+++ b/_posts/2022-07-10-INMEDIA-盧寵茂擬推-安心出行-實名制-張竹君稱無補充-惟認現時追蹤有局限.html
@@ -25,4 +25,4 @@ author: 獨媒報導
 <p><strong>田家炳護養院多3員工染疫</strong></p>
 <p>昨多兩名病人在入院篩查時確診，18名同房病人列為密切接觸者須檢疫。另新增25名醫管局員工確診，12名員工返回工作崗位。</p>
 <p>至於博愛醫院田家炳護養院一間病房，早前累計2名病人及4名員工染疫，該病房今沒有新增個案，染疫病人情況穩定。惟同院另外兩個病房共3名員工先後出現輕微徵狀並確診，當局正調查個案關連，並為醫院所有病人和員工進行測試。</p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
