--- a/_posts/2022-07-11-INMEDIA-兩青年黃大仙非法集結上訴遭駁回-官指裝備-齊全-非普通市民.html
+++ b/_posts/2022-07-11-INMEDIA-兩青年黃大仙非法集結上訴遭駁回-官指裝備-齊全-非普通市民.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/11_30.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年8月24日觀塘大遊行後，多區發生衝突，有示威者在黃大仙龍翔道堵路，警方到場後發射催淚彈驅散，並附近拘捕兩名青年。兩人經審訊後被裁定非法集結罪成，兩人提出上訴，指原審裁判官單憑衣著和拘捕位置推論兩人參與集結，是錯誤臆測。高院今判下判詞駁回兩人上訴，法官李運騰反問若裝扮其他示威者相似，「為什麼不可以同樣成為環境證據之一呢？」並指其中一人裝備「齊全」，不接納兩人當時身份只是普通市民。</p>
+<img src="https://www.inmediahk.net/files/column_images/11_30.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年8月24日觀塘大遊行後，多區發生衝突，有示威者在黃大仙龍翔道堵路，警方到場後發射催淚彈驅散，並附近拘捕兩名青年。兩人經審訊後被裁定非法集結罪成，兩人提出上訴，指原審裁判官單憑衣著和拘捕位置推論兩人參與集結，是錯誤臆測。高院今判下判詞駁回兩人上訴，法官李運騰反問若裝扮其他示威者相似，「為什麼不可以同樣成為環境證據之一呢？」，並指其中一人裝備「齊全」，不接納兩人當時身份只是普通市民。</p>
 <p>上訴人分別為柯俊瑋及陳可兒，兩人案發時均為22歲，柯俊瑋因為有毒癮問題，被判入戒毒所，陳可兒則判5個月監禁。</p>
 <p>上訴人認為即使非法集結與被捕時間，雖然相約只得十分鐘，但不應作出不利推論；上訴人被捕時裝束及管有物品與示威者非常類似，但不應推論上訴人當晚參與集結。上訴方又指並非「選擇留下」，而是「正在離開現場」，原審未能排除十分鐘絕對足夠離開現場，上訴人可能在集結前已在現場，認為定罪不穩妥。</p>
 <p><strong>攜護‍目‍鏡、口罩、濾嘴等裝備</strong></p>
@@ -16,4 +16,4 @@ author: 獨媒報導
 <p>高院法官李運騰在判詞表示，裁判官有權參考被捕位置及當時衣著，作為環境因素考慮。陳可兒曾力陳裁判官未能排除因警方突然在現場發射催淚彈，上訴人從其他人得到防護性裝備並配戴上，以確保可安全離開，又指陳只是一名瘦和矮小的少女，與其他集結示威者有一定程度不同。但李官反駁，看不到她身型和她是否有份參與非法集結有任何關係。李官又反問：「若然裝扮與其他示威者相似，為什麼不可以同樣成為環境證據之一呢？」片段顯示數百名穿相同或相近衣裝的人堵路和非法集結，陳的裝束與該些人符合，且相比之下更屬「齊全」的一群。</p>
 <p>李官表示再分析證據，亦同意原審裁定，即使當時現場有普通市民出現，他亦不接納兩名上訴人為普通市民。綜合環境證據，加上兩人沒有作供，排除他們兩人當時只是路過，或是因為其他合法原因在警方開始驅散示威者時仍然在現場的可能性，唯一合‍理推論就是兩人有備而來，有意地參與了當日在現場的非法集結，定罪沒有不穩妥之處。</p>
 <p>被告為侍應柯俊瑋（22歲）、學生陳可兒（22歲）和梅哲朗（20歲），同被控於前年8月24日，在黃大仙豪苑第二座與黃大仙廟對開一段龍翔道參與非法集結。梅哲朗另被控一項在公眾地方管有攻擊性武器罪。</p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
