--- a/_posts/2022-07-11-PQ-俄烏戰爭資訊戰借鏡-沈伯洋-台灣必須注意承平時期的陰謀論.html
+++ b/_posts/2022-07-11-PQ-俄烏戰爭資訊戰借鏡-沈伯洋-台灣必須注意承平時期的陰謀論.html
@@ -24,7 +24,7 @@ author: 潘柏廷
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/6932fb57-網路訊息戰與國家安全國際論壇現場。圖／中央社。-1024x768.jpg" alt="" class="wp-image-107567" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/6932fb57-網路訊息戰與國家安全國際論壇現場。圖／中央社。-1024x768.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/6932fb57-網路訊息戰與國家安全國際論壇現場。圖／中央社。-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/6932fb57-網路訊息戰與國家安全國際論壇現場。圖／中央社。-768x576.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/6932fb57-網路訊息戰與國家安全國際論壇現場。圖／中央社。.jpg 1478w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>網路訊息戰與國家安全國際論壇現場。圖／潘柏廷拍攝。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/6932fb57-網路訊息戰與國家安全國際論壇現場。圖／中央社。-1024x768.jpg" alt="" class="wp-image-107567" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/6932fb57-網路訊息戰與國家安全國際論壇現場。圖／中央社。-1024x768.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/6932fb57-網路訊息戰與國家安全國際論壇現場。圖／中央社。-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/6932fb57-網路訊息戰與國家安全國際論壇現場。圖／中央社。-768x576.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/6932fb57-網路訊息戰與國家安全國際論壇現場。圖／中央社。.jpg 1478w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>網路訊息戰與國家安全國際論壇現場。圖／潘柏廷拍攝。</figcaption></figure></div>
 
 
 
@@ -64,7 +64,7 @@ author: 潘柏廷
 
 
 
-<p>那麼俄羅斯爭議訊息的六個層次中，中國做哪些協助？沈伯洋拿出目前微軟報告指出：一開始在戰爭前就做駭客攻擊，一直到戰爭繼續延伸下去，往 42 國，成功率29℅，中國成功率是世界平均的兩倍。</p>
+<p>那麼俄羅斯爭議訊息的六個層次中，中國做哪些協助？沈伯洋拿出目前微軟報告指出：一開始在戰爭前就做駭客攻擊，一直到戰爭繼續延伸下去，往 42 國，成功率 29 ℅，中國成功率是世界平均的兩倍。</p>
 
 
 
@@ -88,7 +88,7 @@ author: 潘柏廷
 
 
 
-<ul class="pqnote"><li>2 月 22 日到 2 月 26 日：製造大量用澤倫斯基總統逃跑新聞，拒絕用入侵字眼。</li><li>2 月 27 日到 3 月 6 日：主打納粹化、反北約。</li><li>3 月 7 日到 3 月 13 日：使用 biolah 陰謀論。</li><li>3 月 14 日到 3 月 21 日：因為中國出現疫情，一直強調前兩階段。</li><li>4 月 1 日：開始批判經濟制裁、討論西方利用戰爭賺錢、布查屠殺為假消息</li><li>4 月 15 日到 4 月 22 日：指責西方都在製作假消息、，開始人格抹殺總統。</li><li>4 月底：挺烏言論出現。</li><li>5 月 3 日到 5 月 9 日：開始論述中國中立角色，歐美武器是過期武器。</li><li>5 月底：刪除挺烏言論。</li></ul>
+<ul class="pqnote"><li>2 月 22 日到 2 月 26 日：製造大量用澤倫斯基總統逃跑新聞，拒絕用入侵字眼。</li><li>2 月 27 日到 3 月 6 日：主打納粹化、反北約。</li><li>3 月 7 日到 3 月 13 日：使用 biolah 陰謀論。</li><li>3 月 14 日到 3 月 21 日：因為中國出現疫情，一直強調前兩階段。</li><li>4 月 1 日：開始批判經濟制裁、討論西方利用戰爭賺錢、布查屠殺為假消息</li><li>4 月 15 日到 4 月 22 日：指責西方都在製作假消息、開始人格抹殺總統、西方開始質疑中國角色。</li><li>4 月 23 到 5 月 2 日：挺烏言論出現。</li><li>5 月 3 日到 5 月 9 日：開始論述中國中立角色，歐美武器是過期武器。</li><li>5 月底：刪除挺烏言論。</li></ul>
 
 
 
