--- a/_posts/2022-07-12-INMEDIA-傑志簽兩東方舊將爭入亞冠八強-朱志光冀增新鮮感.html
+++ b/_posts/2022-07-12-INMEDIA-傑志簽兩東方舊將爭入亞冠八強-朱志光冀增新鮮感.html
@@ -17,7 +17,7 @@ author: 獨媒報導
 <p>傑志今季班費約2,000萬元，球員名單共有28人，在三名新外援球員中，米基爾、艾華度均為約滿東方後加盟傑志，佐敦布朗則會在8月初歸隊；費蘭度、港隊U20前後衞周緣德及年輕入籍門將Leonardo Costa 則獲傑志邀請隨隊操練及觀察。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/75n45q" title="IMG_6710"><img src="https://live.staticflickr.com/65535/52211042739_b54fa18d2c_z.jpg" alt="IMG_6710" /></a></p>
 <p><strong>艾華度將完成入籍 稱感謝傑志賞識</strong></p>
-<p>三名新兵均曾在本地效力，29歲的巴西中場米基爾在先後佳聯元朗效力、愉園及東方龍獅，剛為後者在亞協盃分組賽上陣；33歲的巴西後衞艾華度，將填補謝家強及朴俊炯離隊後的中堅空缺。他則預計在短期內取得特區護照，但就未能趕及在亞冠盃以本地球員身份註冊。</p>
+<p>三名新兵均曾在本地效力，29歲的巴西中場米基爾先後佳聯元朗效力、愉園及東方龍獅，剛為後者在亞協盃分組賽上陣；33歲的巴西後衞艾華度，將填補謝家強及朴俊炯離隊後的中堅空缺。他則預計在短期內取得特區護照，但就未能趕及在亞冠盃以本地球員身份註冊。</p>
 <p>上季效力晉峰、28歲左後衞佐敦布朗則令人驚喜，他將在8月初歸隊，屆時將會為本地球員身份註冊。另外，三名小將畢頓、顏卓彬和賓紀文會重返傑志。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/U61Hzk" title="IMG_6701"><img src="https://live.staticflickr.com/65535/52211256730_9b33ae84ae_z.jpg" alt="IMG_6701" /></a></p>
 <p><strong>佐敦布朗成驚喜 朱志光稱一直有留意</strong></p>
