--- a/_posts/2022-07-12-PQ-美政府雇員夥同中國特務監視騷擾異議人士-美司法部起訴5人.html
+++ b/_posts/2022-07-12-PQ-美政府雇員夥同中國特務監視騷擾異議人士-美司法部起訴5人.html
@@ -16,7 +16,7 @@ author: 艾格姆
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/ada0b1c1-165765676449294_p17925638.jpg" alt="" class="wp-image-107811" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/ada0b1c1-165765676449294_p17925638.jpg 798w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/ada0b1c1-165765676449294_p17925638-300x167.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/ada0b1c1-165765676449294_p17925638-768x428.jpg 768w" sizes="(max-width: 798px) 100vw, 798px" /><figcaption>中國公民劉藩，被美國司法部逮捕起訴，指控參與中國的「跨國鎮壓計畫」，買通在地協力者取得中國異議人士資料，再進行監控和騷擾。<br>圖／US Department of Justice</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/ada0b1c1-165765676449294_p17925638.jpg" alt="" class="wp-image-107811" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/ada0b1c1-165765676449294_p17925638.jpg 798w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/ada0b1c1-165765676449294_p17925638-300x167.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/ada0b1c1-165765676449294_p17925638-768x428.jpg 768w" sizes="(max-width: 798px) 100vw, 798px" /><figcaption>中國公民劉藩，被美國司法部逮捕起訴，指控參與中國的「跨國鎮壓計畫」，買通在地協力者取得中國異議人士資料，再進行監控和騷擾。<br>圖／US Department of Justice</figcaption></figure></div>
 
 
 
