--- a/_posts/2022-07-12-INITIUM-半封城下的澳门-大三巴剩下核酸检测站.html
+++ b/_posts/2022-07-12-INITIUM-半封城下的澳门-大三巴剩下核酸检测站.html
@@ -8,10 +8,10 @@ tags: blog
 author: 端传媒实习记者 马碧玉 发自新加坡
 ---
 
-<p>「“相对静止”实行前一天，市民于超市排队大量购买生活所需。街上亦涌现人流，呼吸着“静止”前最后一口“自由的空气”。」</p><p>端传媒实习记者 马碧玉 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220713-photo-macau-partial-lockdown/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/07/531437455ca140abb102887ddf5e9525.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="葡京酒店。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「“相对静止”实行前一天，市民于超市排队大量购买生活所需；街上亦涌现人流，呼吸着最后一口“自由的空气”。」</p><p>端传媒实习记者 马碧玉 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220713-photo-macau-partial-lockdown/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/07/531437455ca140abb102887ddf5e9525.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="葡京酒店。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">葡京酒店。<span class="credit">摄：麦隽华/端传媒</span></figcaption></figure><p>澳门自6月18日爆发新一波疫情，单日确诊个案由数十到逾百宗不等。7月11日，澳门累计有1692例确诊个案，惟当局仍未找出疫情源头。澳门同日开始实施严格防控措施，包括为期7天有限度禁足，所有非必要工商业场所及30多家赌场停运；所有市民如非必要亦被禁止外出，而核酸采样、超市及医院等必要工种的员工则获豁免。澳门政府强调相关措施并非“封城”，而是“相对静止管理”。</p>
 <p>6月下旬开始，市面人流比以往更疏落。昔日游人满至的大三巴、喷水池等旅游区，再没人叫卖牛肉干，只剩一片寂静。现在街上最响亮的，是卫生局安排的流动广播车，车上大喇叭不断播送，呼吁市民不要外出、齐心抗疫。</p>
-<p>禁足期间，当局规定市民只可因买菜或紧急事宜才可出门，且必须戴上N95或KN95口罩；而在街上做运动、放狗等“<a href="https://www.exmoo.com/article/202385.html">跟维生活动扯不上关系的</a>”活动则违法，警方表示会分派人手到全澳门各区巡逻，“了解市民去向”，违者可被判监2年或每日罚款澳门币240元。</p>
+<p>禁足期间，当局规定市民只可因买菜或紧急事宜才可出门，且必须戴上N95或KN95口罩；而在街上做运动、放狗等“<a href="https://www.exmoo.com/article/202385.html">跟维生活动扯不上关系的</a>”活动则违法，警方表示会分派人手到全澳门各区巡逻，“了解市民去向”，违者可被判监2年或每日罚款澳门币240罚金。</p>
 <p>而实施首日，当局对市民发出905宗劝喻；有2人分别因跑步及于户外闲坐不戴口罩讲电话收告票。</p>
 <h2>坚持“清零”，不断检测</h2>
 <p>“相对静止”实行前一天，多间超级市场大排长龙，不少人大量购买生活所需，更有人买红酒、芝士等食物避世，街上亦涌现人流，争相呼吸着“静止”前最后一口“自由的空气”。目前全市禁堂食、停工停市，街上食肆落下半闸。部份市民转战外送市场，外送车手在街头穿梭，穿着橙红外套在各大厦之间进进出出，显眼非常。</p>
