Update VOCUS 2022-07-14 patch

--- a/_posts/2022-07-13-VOCUS-海獸獵人-影射一切爭戰的本質.html
+++ b/_posts/2022-07-13-VOCUS-海獸獵人-影射一切爭戰的本質.html
@@ -45,4 +45,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/01f51096-f4bc-4695-965a-df3032e41872.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">如果是一部六集的系列動畫，我認為也許可以好好鋪層這些故事，而不至於後面向趕火車一樣。可以說雖然整體上感覺不錯，但在節奏的掌握度可能還需要再好一些，例如有些不必要的搞笑戲份、與別隻海獸搏鬥的時間拖太長，導致沒有辦法好好鋪出海獸與王國之間的秘密，這點非常可惜。</div>
 <div class="draft-block draft--p left">也因為這點可惜，雖然在動畫最後知道導演想傳達出對於戰爭的諷刺性，但很明顯力度不足，強行走向好結局，這是這部動畫最大的敗筆，主角威能隨便說兩句大家就都信服這點，是連現在日本動畫主角都得千方百計鬥志才能習得的嘴砲效果，讓《海獸獵人》動畫收尾留下遺憾。</div>
-<div class="embed-block-prerender" data-type="html" data-url="https://www.youtube.com/watch?v=oaPn3ff7tjw"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/oaPn3ff7tjw"></iframe></div>
