--- a/_posts/2022-07-13-PQ-宋承恩-爭議的豈只是台灣海峽法律地位-中國正吹響進犯台灣的號角.html
+++ b/_posts/2022-07-13-PQ-宋承恩-爭議的豈只是台灣海峽法律地位-中國正吹響進犯台灣的號角.html
@@ -8,7 +8,7 @@ tags: blog
 author: 宋承恩
 ---
 
-<figure class="wp-block-pullquote has-border-color has-white-border-color has-primary-color has-pale-ocean-gradient-background has-text-color has-background has-small-font-size" style="border-radius:0px;font-style:normal;font-weight:400"><blockquote><p>T 和隔壁 C 家就隔著一條小巷弄。社區居民出門上班上學購物，向來都走這條通道。</p><p>C 家大業大看來很有錢，經常頤指氣使欺侮霸凌 T，社區的人都看不慣。前幾天 C 忽然在社區門口自行張貼公告，嚴正聲明：</p><p>1. C 擁有 T 家的產權；<br>2. 基於這個理由，T 與 C 之間的巷弄是歸 T 管的，不是公共的；<br>3. 社區居民、外界訪客可以繼續通過小巷弄，但 T「保留管理特定人士通過」的權利。</p><p>這條巷弄之所以重要，除了大家都要通行以外，還有一個原因： C 家主張 T 家是自己的。</p><p>但 C 不去法院解決，反而是一直準備武器、壯丁，想要用強迫的手段把 T 的房子「奪回來」。過去 C 家曾多次嘗試侵犯 T，其他社區住戶想要阻止 C，方法之一是進入巷弄；若是不再能進入巷弄，勢同坐視 C 一步步包圍 T。</p><p>社區人士多半看得很清楚，紛紛表明 C 對巷弄的主張不合理。</p><p><strong>作為 T 家人，你對 C 的表態，採取什麼立場？</strong></p></blockquote></figure>
+<figure class="wp-block-pullquote has-border-color has-white-border-color has-primary-color has-pale-ocean-gradient-background has-text-color has-background has-small-font-size" style="border-radius:0px"><blockquote><p style="font-size: 20px;">T 和隔壁 C 家就隔著一條小巷弄。社區居民出門上班上學購物，向來都走這條通道。</p><p style="font-size: 20px;">C 家大業大看來很有錢，經常頤指氣使欺侮霸凌 T，社區的人都看不慣。前幾天 C 忽然在社區門口自行張貼公告，嚴正聲明：</p><ol  style="font-size: 20px; padding-left:2.1em; text-indent: -1em;" type="1"><li>C 擁有 T 家的產權；</li><li>基於這個理由，T 與 C 之間的巷弄是歸 T 管的，不是公共的；</li><li>社區居民、外界訪客可以繼續通過小巷弄，但 T「保留管理特定人士通過」的權利。</li></ol><p style="font-size: 20px;">這條巷弄之所以重要，除了大家都要通行以外，還有一個原因： C 家主張 T 家是自己的。</p><p style="font-size: 20px;">但 C 不去法院解決，反而是一直準備武器、壯丁，想要用強迫的手段把 T 的房子「奪回來」。過去 C 家曾多次嘗試侵犯 T，其他社區住戶想要阻止 C，方法之一是進入巷弄；若是不再能進入巷弄，勢同坐視 C 一步步包圍 T。</p><p style="font-size: 20px;">社區人士多半看得很清楚，紛紛表明 C 對巷弄的主張不合理。</p><p style="font-size: 20px;"><strong>作為 T 家人，你對 C 的表態，採取什麼立場？</strong></p></blockquote></figure>
 
 
 
@@ -40,7 +40,7 @@ author: 宋承恩
 
 
 
-<ol type="A" class="pqnote has-medium-font-size"><li>台灣海峽的法律地位：各國的船舶、飛航器，包括軍艦、軍機，是否能在台灣海峽自由航行、通過，不受中國的干預？</li><li>台灣海峽的安全意涵：各國的軍艦、軍機，是否能夠在台灣海峽內活動，履行其軍力投射的目的，包括嚇阻中國對台灣的侵略？</li><li>台灣的主權：台灣屬於中國？還是不屬於中國？</li></ol>
+<ol class="pqnote has-medium-font-size" style="list-style-type: upper-alpha; text-indent: -1.1em; padding-left:2em;"><li>台灣海峽的法律地位：各國的船舶、飛航器，包括軍艦、軍機，是否能在台灣海峽自由航行、通過，不受中國的干預？</li><li>台灣海峽的安全意涵：各國的軍艦、軍機，是否能夠在台灣海峽內活動，履行其軍力投射的目的，包括嚇阻中國對台灣的侵略？</li><li>台灣的主權：台灣屬於中國？還是不屬於中國？</li></ol>
 
 
 
@@ -128,7 +128,7 @@ author: 宋承恩
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/576e144f-taiwanstraita.png" alt="" class="wp-image-107910" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/576e144f-taiwanstraita.png 1000w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/576e144f-taiwanstraita-300x300.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/576e144f-taiwanstraita-150x150.png 150w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/576e144f-taiwanstraita-768x768.png 768w" sizes="(max-width: 1000px) 100vw, 1000px" /><figcaption>中國擴張的主要主張，但包括台灣和歐美日等國都嚴正反對。<br>圖／報呱製圖</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/576e144f-taiwanstraita.png" alt="" class="wp-image-107910" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/576e144f-taiwanstraita.png 1000w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/576e144f-taiwanstraita-300x300.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/576e144f-taiwanstraita-150x150.png 150w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/576e144f-taiwanstraita-768x768.png 768w" sizes="(max-width: 1000px) 100vw, 1000px" /><figcaption>中國擴張的主要主張，但包括台灣和歐美日等國都嚴正反對。<br>圖／報呱製圖</figcaption></figure>
 
 
 
