--- a/_posts/2022-07-13-INITIUM-重返少年台湾-一部电影背后的天才成群-江湖爆发与九零年代.html
+++ b/_posts/2022-07-13-INITIUM-重返少年台湾-一部电影背后的天才成群-江湖爆发与九零年代.html
@@ -10,7 +10,7 @@ author: 特约撰稿人 孙志熙 发自台北
 
 <p>「“孩子们闯进来的时候刚好是夜晚，黎明还没来到之前，他们已经殒落了。”」</p><p>特约撰稿人 孙志熙 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220714-culture-dust-of-angels-interview/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/07/b98dc322653a438c99f223af82e32022.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="《少年吔，安啦！》剧照。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">《少年吔，安啦！》剧照。<span class="credit">图：牵猴子提供</span></figcaption></figure><p><small>【编者按】三十年前上映（1992）的台湾电影《少年吔，安啦！》（导演徐小明，监制侯孝贤，主演颜正国等）讲述了台湾社会在经济成长的影响下，呈现出迅速增长的青少年暴力问题。该片虽一直被奉为台湾电影经典之作，但在当年并未引起轰动。概因经典之突破，常常超前于它所处的时代；又因其永恒，可被不同时空的观众共鸣。</small></p>
-<p>三十年后，定义了台式黑帮电影美学起点的《少年吔，安啦！》4K修复版重现江湖，这部当年票房折翼、影展落空、却在民间持续口碑相传的传奇电影，因何而生？又会带给今日观众怎样的感触？我们为此制作了一个特别专题，从电影、音乐与1990年代三个角度，与观众一起，开启这趟三十年的台湾时光旅行。</p>
+<p><small>三十年后，定义了台式黑帮电影美学起点的《少年吔，安啦！》4K修复版重现江湖，这部当年票房折翼、影展落空、却在民间持续口碑相传的传奇电影，因何而生？又会带给今日观众怎样的感触？我们为此制作了一个特别专题，从电影、音乐与1990年代三个角度，与观众一起，开启这趟三十年的台湾时光旅行。</small></p>
 <p>1992年可能是电影界特殊的一年，东西方各自产出一部颠覆既有语汇、启发后世深远的黑帮片，并且都是首部导演作品──美国有《霸道横行》（Reservoir Dogs），导演昆汀塔伦提诺（Quentin Jerome Tarantino）在消化过香港导演吴宇森《英雄本色》、《喋血》系列后，演化出崭新独创的叙事风格；而台湾则拍了第一部描写黑帮次文化的《少年吔，安啦！》，由台湾新电影的元老们辅佐操刀，新人执导，首次将镜头对准游走在法律边缘的草根群体，适逢解严初期的创作力迸发，以及<a href="https://zh.m.wikipedia.org/zh-tw/%E6%96%B0%E8%87%BA%E8%AA%9E%E6%AD%8C%E9%81%8B%E5%8B%95">“新台语歌运动”</a>风潮，该片成为电影与音乐跨界大爆发的产物。</p>
 <p>三十年前的历史不是人人都熟悉，但若你比较关注近年台湾影视作品，又对某些情节设计、本土元素特别有感，比如《翻滚吧！阿信》（2011）的小镇青年双人组，因误入歧途逃亡至台北，在黑与毒的险境中赔上性命；比如《大佛普拉斯》（2017）建构的盘根错节的乡镇金权关系、各方势力生动的形象嘴脸；甚或殷振豪为茄子蛋乐团打造的“浪子宇宙”三部曲MV（2017-2019）中，𨑨迌（游玩）人们的台味浪漫令你醉心，那么在此想告诉你，这些散落的线索其实可以汇集到同一个原点──1992年7月上映的《少年吔，安啦！》。</p>
 <blockquote>
@@ -21,33 +21,13 @@ author: 特约撰稿人 孙志熙 发自台北
 
 <h2>台湾文化界人物都在参与这部片</h2>
 <p>《少年吔，安啦！》之所以能够问世，需要先把时间倒回1989年。</p>
- 
- 
- 
- 
- 
- 
-
+<p>那年秋天，台湾影史写下一笔空前纪录：《悲情城市》获得威尼斯影展金狮奖，台湾票房狂收八千万。当时，和导演侯孝贤已有十二年交情的制片人张华坤，两人都从剧组基层干起，合作过赖成英导演的《烟水寒》、万仁导演的《油麻菜籽》后，又组成导演制片搭档，在1983到1989年间拍摄了《风柜来的人》、《冬冬的假期》、《童年往事》、《恋恋风尘》、《尼罗河女儿》与《悲情城市》。而彼时，《悲》片的国际大奖与票房的成功为他们打下强心针，认为可以撑大国片格局、展现职人尊严的时机已到，张华坤便在1990年成立“城市国际电影公司”（以下称城市电影），以“侯孝贤监制”为号召，期望扶植新导演，拍出更多反映当代青年生存状态的电影，《少年吔，安啦！》即是第一部创业之作。</p>
  
  
  
  
  
 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
  
  
  
@@ -71,6 +51,8 @@ author: 特约撰稿人 孙志熙 发自台北
  
  
  
+ 
+ 
 
  
  
@@ -81,7 +63,25 @@ author: 特约撰稿人 孙志熙 发自台北
  
  
  
-<p>那年秋天，台湾影史写下一笔空前纪录：《悲情城市》获得威尼斯影展金狮奖，台湾票房狂收八千万。当时，和导演侯孝贤已有十二年交情的制片人张华坤，两人都从剧组基层干起，合作过赖成英导演的《烟水寒》、万仁导演的《油麻菜籽》后，又组成导演制片搭档，在1983到1989年间拍摄了《风柜来的人》、《冬冬的假期》、《童年往事》、《恋恋风尘》、《尼罗河女儿》与《悲情城市》。而彼时，《悲》片的国际大奖与票房的成功为他们打下强心针，认为可以撑大国片格局、展现职人尊严的时机已到，张华坤便在1990年成立“城市国际电影公司”（以下称城市电影），以“侯孝贤监制”为号召，期望扶植新导演，拍出更多反映当代青年生存状态的电影，《少年吔，安啦！》即是第一部创业之作。</p><p>曾起草〈台湾电影宣言〉，并和侯孝贤、杨德昌、吴念真、朱天文、陈国富等人成立“电影合作社”的詹宏志，有过《悲情城市》和《牯岭街少年杀人事件》版权预售及整合行销的操作经验后，再度担任《少年吔，安啦！》策画之一，他的工作重点是建立发行策略、规划行销宣传，首先找来一家日本制片兼发行商“Hiro”，一口气和城市电影签了三部片的预售合约，包括《少年吔，安啦！》、《台北孤儿》（陈国富执导，后改名《只要为你活一天》）、《高雄国》（侯孝贤执导，后取消制作）。</p><p>接著，他又企划周边出版品，有电影小说、剧本书、报导文学、漫画；时任波丽佳音总经理的他，再与真言社创办人倪重华发展出与电影同步创作的“概念专辑”构想，并计划上片时，在新生国小礼堂举办一场多功能演唱会。另一位策画是陈国富，他主要投入在剧本开发，以及在后期宣传时担任电影歌曲〈无声的所在〉MV导演。</p><p>就是这样，这些当时及后来名震台湾文化界的人物，便都参与到《少年吔，安啦！》这部电影里来。</p><p>
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+<p>曾起草〈台湾电影宣言〉，并和侯孝贤、杨德昌、吴念真、朱天文、陈国富等人成立“电影合作社”的詹宏志，有过《悲情城市》和《牯岭街少年杀人事件》版权预售及整合行销的操作经验后，再度担任《少年吔，安啦！》策画之一，他的工作重点是建立发行策略、规划行销宣传，首先找来一家日本制片兼发行商“Hiro”，一口气和城市电影签了三部片的预售合约，包括《少年吔，安啦！》、《台北孤儿》（陈国富执导，后改名《只要为你活一天》）、《高雄国》（侯孝贤执导，后取消制作）。</p><p>接著，他又企划周边出版品，有电影小说、剧本书、报导文学、漫画；时任波丽佳音总经理的他，再与真言社创办人倪重华发展出与电影同步创作的“概念专辑”构想，并计划上片时，在新生国小礼堂举办一场多功能演唱会。另一位策画是陈国富，他主要投入在剧本开发，以及在后期宣传时担任电影歌曲〈无声的所在〉MV导演。</p><p>就是这样，这些当时及后来名震台湾文化界的人物，便都参与到《少年吔，安啦！》这部电影里来。</p><p>
 </p><p>“不能被归类在类型片，这也是它当年被严重低估的原因，它充满台湾原生的草莽，也承袭台湾新电影的气质，它整体还是更接近侯孝贤的《南国再见，南国》（1996）。它的独特恰恰就是难以跟其他作品对标，它是纯属台湾、自成一格的。”</p>
 <p></p><p><a class="image" href="https://theinitium.com/article/20220714-culture-dust-of-angels-interview/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/07/17b29fb54ba946eda83f8fca914983e9.jpg?imageView2/1/w/1080/h/1620/format/jpg" alt="导演徐小明。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">导演徐小明。<span class="credit">图：受访者提供</span></figcaption><p></p><p>万事俱备，谁来导演？</p><p>世新电影科毕业，1979年正式入行的徐小明，很快便进入李行、张佩成导演的制作班底担任副导演，也做过侯孝贤《童年往事》、谭家明《雪在烧》的副导，接著他和所有怀抱导演梦的青年一样，开始准备自己的剧本。张华坤得知后表示支持，更在1988年鼓励他把握中影《落山风》计划的提案机会，只是这次提案并未让他往目标接近，反而使他放弃梦想，“那时我个性很腼腆，不太会说话，找投资人完全是我不擅长的。”提案结束，深受打击的徐小明没有回去城市电影，就这么一个人慢慢从中影走回家，路上他想，要不继续做副导，要不彻底解决问题，于是他在那一年离开电影圈，回到出生地高雄参与朋友的餐厅生意。</p><p>一离开就是三年，其间他仍和业界朋友保持联络，城市电影开始筹备《少年吔，安啦！》，有意交给徐小明执导，原始剧本是比较接近动作喜剧、拍档电影的类型片，主角是两个少年，只有人物设置被徐小明保留下来，其他差不多全改了，“我先跟侯导坤哥聊了在高雄生活的见闻感触，也介绍当地朋友给他们认识，写的过程我回到两个人物身上，而不像以前的训练是按情节事件驱动，我是更以人物为主，希望让人物的情感真实、落地。”</p><p>新剧本的第一稿出来后曾有一场剧本研讨会，与会者除了侯与张，还有徐小明在《童年往事》认识的剧照师陈怀恩，以及朱天文和陈国富，影评人出身的陈国富提出关键一点：“担心剧本太像史柯西斯的《残酷大街》”，大伙租来影碟一看，确实有很相通的地方，人物设定也非常接近，都是在现实跟信仰中间游移。这种意外的巧合还是得避免才行，徐小明又花了半年写了第二稿剧本，即是最后拍摄的版本。</p><p><a class="image" href="https://theinitium.com/article/20220714-culture-dust-of-angels-interview/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/07/17c828db405c49ffa9f7ade7163b34e4.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="《少年吔，安啦！》剧照。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
