--- a/_posts/2022-07-13-PQ-德國北溪一號管線歲修-各界憂俄羅斯修後會直接斷供天然氣.html
+++ b/_posts/2022-07-13-PQ-德國北溪一號管線歲修-各界憂俄羅斯修後會直接斷供天然氣.html
@@ -32,7 +32,7 @@ author: 李熱葵
 
 
 
-<p class="pqnote">不過最受影響的還是德國。若北溪一號完全停止供應天然氣，德國勞動市場也將受到嚴重衝擊，少掉 560 萬個工作。</p>
+<p class="pqnote">不過最受影響的還是德國。若北溪一號完全停止供應天然氣，德國勞動市場也將受到嚴重衝擊，據估計可能會有大約 560 萬個工作受到波及。</p>
 
 
 
