--- a/_posts/2022-07-14-PQ-國民黨內鬥-堅持參選到底-鍾東錦-被卸任-苗栗縣黨部主委.html
+++ b/_posts/2022-07-14-PQ-國民黨內鬥-堅持參選到底-鍾東錦-被卸任-苗栗縣黨部主委.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/78024eeb-1350x768_20220713000069.jpg" alt="" class="wp-image-108046" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/78024eeb-1350x768_20220713000069.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/78024eeb-1350x768_20220713000069-300x171.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/78024eeb-1350x768_20220713000069-768x437.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>兼任國民黨苗栗縣黨部主委的苗栗縣議長鍾東錦堅持投入苗栗縣長選舉，13 日開記者會告別縣黨部，原本掛在黨部大樓牆面的個人形象看板也在記者會後出動吊車拆除／圖：中央社記者管瑞平攝 2022 年 7 月 13 日。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/78024eeb-1350x768_20220713000069.jpg" alt="" class="wp-image-108046" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/78024eeb-1350x768_20220713000069.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/78024eeb-1350x768_20220713000069-300x171.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/78024eeb-1350x768_20220713000069-768x437.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>兼任國民黨苗栗縣黨部主委的苗栗縣議長鍾東錦堅持投入苗栗縣長選舉，13 日開記者會告別縣黨部，原本掛在黨部大樓牆面的個人形象看板也在記者會後出動吊車拆除／圖：中央社記者管瑞平攝 2022 年 7 月 13 日。</figcaption></figure></div>
 
 
 
@@ -76,7 +76,7 @@ author: 林志鴻
 
 
 
-<p>參考資料：<br>2022/07/06　鍾東錦臉書　<a href="https://www.facebook.com/DongJinZhong/posts/pfbid07atRTqUpLQTn3FL5975WMpxkyhYwuSQj6NKBRZfepK9Z99nhMMMw4uxBJpuAGcm3l" target="_blank" rel="noreferrer noopener">苗栗願景，前程似錦</a><br>2022/07/13　中央社　<a href="https://www.cna.com.tw/news/aipl/202207130170.aspx" target="_blank" rel="noreferrer noopener">遭卸任黨部主委 鍾東錦：將打贏苗栗縣長選戰</a></p>
+<p>參考資料：<br>2022/07/06　鍾東錦臉書　<a href="https://www.facebook.com/DongJinZhong/posts/pfbid07atRTqUpLQTn3FL5975WMpxkyhYwuSQj6NKBRZfepK9Z99nhMMMw4uxBJpuAGcm3l" target="_blank" rel="noreferrer noopener">苗栗願景，前程似錦</a></p>
 
 
 
