Update VOCUS 2022-07-15 patch

--- a/_posts/2022-07-14-VOCUS-水都物語-可惜的台灣水族漫畫.html
+++ b/_posts/2022-07-14-VOCUS-水都物語-可惜的台灣水族漫畫.html
@@ -37,4 +37,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/b2088add-fbc8-4a3d-bd20-f6208c555505.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">再來關於畫技也是一大問題，如果以業餘同人誌創作者的水平來說，我會覺得《水都物語》的畫技不算有太大問題，但是以商業漫畫，甚至是上架到書局通路的專業知識漫畫來說，把魚畫好、把人物畫好是基本。一本連魚都畫到讓自己水族群體分不出來的水族漫畫，成了漫畫裡很大的敗筆，再則黑白漫畫又捨去了魚類漂亮顏色的優點，實在讓人無法稱讚。</div>
 <div class="draft-block draft--p left">總體來說《水都物語》讓我對於職業、興趣向漫畫在台灣，有著不錯的嘗試與實驗性，但作品本身的深度與完整度我給不出太高的評價。漫畫中在著眼觀賞用魚的水族知識時的首先，在劇本和圖畫上要先替漫畫讀者勾起興趣，不然再多知識與推廣也是枉然。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/-0tv9qf5oHc"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/-0tv9qf5oHc"></iframe></div>
