--- a/_posts/2022-07-15-INMEDIA-蔡若蓮稱移民家長未必不滿香港教育-觀感大於實際.html
+++ b/_posts/2022-07-15-INMEDIA-蔡若蓮稱移民家長未必不滿香港教育-觀感大於實際.html
@@ -10,7 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/20220715edu.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>香港出現移民潮，學生人數減少衝擊教育系統，教育局局長蔡若蓮在多間報章訪問表達看法，她稱移民家長不一定不滿本港教育制度，現時移民門檻低，家長或抱嘗試心態移民，又重申移民潮「觀感大於實數」。蔡若蓮提及個別科目教師流失明顯，教育局會增辦課程應對。</p>
 <p>最新《學生人數統計報告書》顯示，前年在港的學生，截至去年9月少了2.5萬人，他們不再留港讀中小學，蔡若蓮在傳媒訪問表示原因是學生人口下降，包括生育率低、新來港計劃受疫情影響、家庭移民，當中移民因素涉及家庭考慮。</p>
-<p>她又指移民家不一定是因為香港教育制度不好，現時BNO「5＋1」計劃門檻低，沒有經濟水平限制，變相鼓勵家長「試一試」。她強調移民潮不會集中個別一級，而是分佈不同班別，形容「觀感多過個實際數字」。</p>
+<p>她又指移民家庭不一定是因為香港教育制度不好，現時BNO「5＋1」計劃門檻低，沒有經濟水平限制，變相鼓勵家長「試一試」。她強調移民潮不會集中個別一級，而是分佈不同班別，形容「觀感多過個實際數字」。</p>
 <p>蔡若蓮又指應對人口結構性下降，方法是合併、停辦部分學校，以及將位於學額過多地區的學校，遷至新發展區等。她又指有校長反映英文教師流失多，蔡若蓮稱會密切留意趨勢，針對個別學科需求增辦課程。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/" title="無標題"><img src="https://live.staticflickr.com/65535/51320075642_ee0eec6ff7_z.jpg" alt="無標題" /></a><br /><em>資料圖片</em></p>
 <p><strong>津校教師宣誓非優先 國教獨立成科流於表面</strong></p>
