--- a/_posts/2022-07-15-INMEDIA-升旗易得道-否認借健仔名義眾籌-稱花逾百萬提供食宿等-已盡全力幫助四人.html
+++ b/_posts/2022-07-15-INMEDIA-升旗易得道-否認借健仔名義眾籌-稱花逾百萬提供食宿等-已盡全力幫助四人.html
@@ -11,7 +11,7 @@ author: 獨媒報導
 <img src="https://www.inmediahk.net/files/column_images/newnewdontdelete-%E5%B7%B2%E4%BF%AE%E5%BE%A9_22.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>包括2019年荃灣中槍少年曾志健在內的4名青年，<a href="https://www.inmediahk.net/node/社運/中槍健仔今日西貢區被捕-明午區院提堂歸案">前日被警方在西頁北潭涌拘捕</a>。<a href="https://www.inmediahk.net/node/社運/李桂華：藏匿4青年組織「食人血饅頭」-紙箱運送匿藏-收逾40萬偷渡費">警方國安處事後指，有組織透過游說4人潛逃，操控他們行蹤，斥有關人士食「人血饅頭」</a>；有傳媒指事件涉YouTube頻道「升旗易得道」。該頻道的主持人今日上載影片回應事件，否認曾借4人名義眾籌，自言花逾百萬為他們提供食宿，又曾助曾志健的15歲女朋友離港。他們稱已盡全力幫助四人，「明眼人都睇到，我哋盡緊全力幫嗰四個人，走唔到係不幸。」</p>
 <p><strong>稱曾建議健仔向美領求助 匿藏期間請專人煮飯、買遊戲機解悶</strong></p>
 <p>「升旗易得道」的主持人蔡明達和霍嘉誌今日上載兩條影片，主動稱回應事件。兩人自稱在前年港區國安法實施後已離港，本身不認識曾志健，後來透過Telegram頻道「探子」搭上搭才認識他；「探子」於前年8月尾至9月初，詢問他們有沒有方法協助曾志健離港。</p>
-<p>兩人表示，知道曾志健中槍後仍被警方控告暴動罪，故希望盡力提供協助，曾建議曾到美國領事館尋求庇護，未料領事館「唔肯幫」，令兩人感到嗟異。兩人指，當時接載曾志健等人到領事館的車手，被警方跟蹤了一星期，其後已前往英國。</p>
+<p>兩人表示，知道曾志健中槍後仍被警方控告暴動罪，故希望盡力提供協助，曾建議曾到美國領事館尋求庇護，未料領事館「唔肯幫」，令兩人感到詫異。兩人指，當時接載曾志健等人到領事館的車手，被警方跟蹤了一星期，其後已前往英國。</p>
 <p>曾志健等人因未能離港，只能在香港匿藏。兩人承認，在過去兩年為曾志健4人提供住宿及三餐，每月花數萬元請專人煮飯及送飯，又購買遊戲機及影片供他們娛樂，總共花費過百萬元。兩人強調，因擔心會連累其他人，一直沒有用4人名義籌款，所有開支由自己承擔。他們又提到，曾為曾志健的15歲女朋友買機票，並花錢請人扮作她舅舅，協助她前往英國。</p>
 <p><strong>認曾要求拍片 料4人被船家爆料出賣被捕</strong></p>
 <p>兩人續指，去年曾收買貨櫃輪船長，打算利用貨櫃輪協助曾志健等4人離港，但因一名叫「陳世德」（音）的中間人以此在外地四處籌款，令事件過於張揚，終無法成行。兩人承認在安排4人上船前，曾要求他們拍片交待自身情況，指因要坐船十多天，拍影片是「有咩意外都有個交待」，又指警方提到4人支付的40萬元是被陳收取。</p>
