--- a/_posts/2022-07-15-INMEDIA-綜援翁違限聚令求分期繳款-警稱可向官申述-結果遭法庭重罰雙倍.html
+++ b/_posts/2022-07-15-INMEDIA-綜援翁違限聚令求分期繳款-警稱可向官申述-結果遭法庭重罰雙倍.html
@@ -12,7 +12,7 @@ author: 獨媒報導
 <p>現時違反限聚令獲發5,000元定額罰款告票，如果沒有繳交罰款，執法部門會申請傳票，當局會根據599F限聚令檢控，最高刑罰是罰2.5萬元，及入獄6個月。</p>
 <p><strong>曾向警方寫求情信 請求分期支付</strong></p>
 <p>上訴人鄭建輝（68歲）在去年8月4日在藍田德田邨，被警方發現在公園處聚集，人數達6男1女，警方向他發出定額罰款通知書。鄭在收到通知書後，沒有繳付定額罰款，只對有關罪行的法律責任提出求情，他希望在繳付方式上可得通融。</p>
-<p>惟因他並非提據條例，提出合法權限或合理辯解，警方最終申請將他告上法庭。鄭最終認罪，並求情每月靠4,000元綜援金為生。他指在收到定額罰款通知書後，曾經寫過求情信給警方，強調自己「不是故意不繳交罰款，而只是沒有錢交」。</p>
+<p>惟因他並非根據條例，提出合法權限或合理辯解，警方最終申請將他告上法庭。鄭最終認罪，並求情每月靠4,000元綜援金為生。他指在收到定額罰款通知書後，曾經寫過求情信給警方，強調自己「不是故意不繳交罰款，而只是沒有錢交」。</p>
 <p>原審裁判官最終在定額罰款5,000元之上，再施5,000元附加罰款，另加訟費500元，合共罰10,500元。</p>
 <p><strong>律政司一方支持原審重罰</strong></p>
 <p>鄭建輝提出上訴，他重申並非打算爭議涉案罪行的刑責，只是去信詢問當局，倘若未能一次過繳付定額罰款的話，有沒有方法通融，讓他彈性繳款。鄭表示當時獲告知可向法庭申述，他於是出庭聆訊。</p>
