--- a/_posts/2022-07-15-PQ-威懾中俄艦隊-美日軍演罕見大規模出動52架戰機.html
+++ b/_posts/2022-07-15-PQ-威懾中俄艦隊-美日軍演罕見大規模出動52架戰機.html
@@ -2,7 +2,7 @@
 layout: post
 title: 威懾中俄艦隊？美日軍演罕見大規模出動52架戰機
 date: 2022-07-15 00:24:25.000000000 +00:00
-link: https://pourquoi.tw/2022/07/15/intlnews-neasia-220708-220714-1/
+link: https://pourquoi.tw/2022/07/15/intlnews-neasia-220708-220714-1/?utm_source=rss&utm_medium=rss&utm_campaign=intlnews-neasia-220708-220714-1
 categories: pq
 tags: blog
 author: 陳怡菱
