--- a/_posts/2022-07-15-PQ-調查報告兩大矛盾曝光-恩恩爸爸-新北市府自打臉顯得可恥.html
+++ b/_posts/2022-07-15-PQ-調查報告兩大矛盾曝光-恩恩爸爸-新北市府自打臉顯得可恥.html
@@ -2,7 +2,7 @@
 layout: post
 title: 調查報告兩大矛盾曝光　恩恩爸爸：新北市府自打臉顯得可恥
 date: 2022-07-15 08:08:51.000000000 +00:00
-link: https://pourquoi.tw/2022/07/15/taiwan-news-20220715-01/
+link: https://pourquoi.tw/2022/07/15/taiwan-news-20220715-01/?utm_source=rss&utm_medium=rss&utm_campaign=taiwan-news-20220715-01
 categories: pq
 tags: blog
 author: Salima
